kubernetes/manifests/deployment.yaml
# This is a sample deployment manifest file for a simple web application.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-go-web-app
  labels:
    app: k8-go-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8-go-web-app
  template:
    metadata:
      labels:
        app: k8-go-web-app
    spec:
      containers:
      - name: k8-go-web-app
        image: dasotd/goweb
        ports:
        - containerPort: 8087
