kubernetes/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k8-go-web-app.dev
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8-go-web-app
            port:
              number: 80
